# vi_climate_devices

./: .gitignore  AGENTS.md  README.md  debug_device_cache.py  debug_mock_v3.py  debug_mock_v4.py  hacs.json  pyproject.toml  renovate.json  requirements_test.txt
.agent/rules/: architecture-context.md  git-workflow.md  library-protection.md  python-docs.md  python-style.md  tech-stack.md  testing.md
.agent/workflows/: doc-update.md  feature-develop.md  pr-submit.md  quality_assurance.md  release.md  rules-compliance-check.md  test-compliance-check.md
.github/workflows/: pre-release.yml  release.yml
custom_components/vi_climate_devices/: __init__.py  application_credentials.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  utils.py  water_heater.py
custom_components/vi_climate_devices/translations/: de.json  en.json
tests/: conftest.py  test_analytics.py  test_application_credentials.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_discovery_ignore.py  test_discovery_snapshot.py  test_dynamic_discovery.py  test_init.py  test_mock_fixtures.py  test_number.py  test_regression.py  test_select.py  test_sensor.py  test_sensor_dynamic.py  test_switch.py  test_translations.py  test_utils.py  test_water_heater.py
tests/__snapshots__/: test_discovery_snapshot.ambr
tests/snapshots/: test_discovery_snapshot.ambr
